packages/typ/tests/fixtures/diagnostics/0986_mli_binary_type_underapplied_07.mli
type ('a, 'b) pair_eta
val x_eta : int pair_eta
